--- a/form.html
+++ b/form.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/gridy.css">
-    <link rel="stylesheet" href="css/gridy-grid.css">
-    <link rel="stylesheet" href="css/gridy-form.css">
+    <link rel="stylesheet" href="css/gridbox.css">
+    <link rel="stylesheet" href="css/gridbox-grids.css">
+    <link rel="stylesheet" href="css/gridbox-form.css">
     <title>Form Element</title>
 </head>
 <body>
@@ -18,22 +18,22 @@
             <form action="">
                 <!-- Text Input -->
                 <div class="form-group">
-                    <label for="inputFormControl-1">Default Text Input</label>
+                    <label class="label-inline" for="inputFormControl-1">Default Text Input</label>
                     <input type="text" class="form-input" id="inputFormControl-1" placeholder="Enter text">
                 </div>
                 <!-- Email Input -->
                 <div class="form-group">
-                    <label for="emailFormControl-1">Default Email Input</label>
+                    <label class="label-inline" for="emailFormControl-1">Default Email Input</label>
                     <input type="email" class="form-input" id="emailFormControl-1" placeholder="Enter email">
                 </div>
                 <!-- Textarea -->
                 <div class="form-group">
-                    <label for="textareaFormControl-1">Textarea Input</label>
+                    <label class="label-inline" for="textareaFormControl-1">Textarea Input</label>
                     <textarea type="text" class="form-input" id="textareaFormControl-1" placeholder="Enter text" rows="3"></textarea>
                 </div>
                 <!-- Single Option -->
                 <div class="form-group">
-                    <label for="optionFormControl-1">Option List</label>
+                    <label class="label-inline" for="optionFormControl-1">Option List</label>
                     <div class="singleSelectWrapper"> <!-- use a wrapper div to select the ::after element -->
                         <span class="caret"></span>
                         <select class="form-input" id="optionFormControl-1">
@@ -47,7 +47,7 @@
                 </div>
                 <!-- Multiple Option -->
                 <div class="form-group">
-                    <label for="optionFormControl-1">Option List</label>
+                    <label class="label-inline" for="optionFormControl-1">Option List</label>
                     <div class="multiSelectWrapper">
                         <select multiple class="form-input" id="optionFormControl-1">
                             <option>Option One</option>
@@ -59,7 +59,7 @@
                 </div>
                 <!-- Check Box -->
                 <div class="form-group">
-                    <label>
+                    <label class="label-inline">
                         <input type="checkbox" class="form-check" id="checkFormControl-1">
                         <span>Default Check Box</span>
                     </label>
@@ -68,15 +68,15 @@
                 <fieldset class="form-field">
                     <legend>Radio Check Buttons</legend>
                     <div class="form-group">
-                        <label>
+                        <label class="label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-1" name="radioFormControl_1" value="" checked>
                             <span>Radio Check One</span>
                         </label>
-                        <label>
+                        <label class="label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-1" name="radioFormControl_1" value="">
                             <span>Radio Check One</span>
                         </label>
-                        <label>
+                        <label class="label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-1" name="radioFormControl_1" value="">
                             <span>Radio Check One</span>
                         </label>
@@ -84,6 +84,10 @@
                 </fieldset>
 
                 <button type="button" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-secondary">Submit</button>
+                <button type="button" class="btn btn-success">Submit</button>
+                <button type="button" class="btn btn-warning">Submit</button>
+                <button type="button" class="btn btn-danger">Submit</button>
             </form>
 
             <!-- Flex Display Form -->
@@ -98,12 +102,12 @@
                 </div>
                 <!-- Textarea -->
                 <div class="form-group row">
-                    <label class="col-2" for="textareaFormControl-1">Textarea Input</label>
+                    <label class="col-2 label-inline" for="textareaFormControl-1">Textarea Input</label>
                     <textarea type="text" class="col-10 form-input" id="textareaFormControl-1" placeholder="Enter text" rows="3"></textarea>
                 </div>
                 <!-- Single Option -->
                 <div class="form-group row">
-                    <label class="col-2" for="optionFormControl-1">Option List</label>
+                    <label class="col-2 label-inline" for="optionFormControl-1">Option List</label>
                     <div class="col-2 singleSelectWrapper"> <!-- use a wrapper div to select the ::after element -->
                         <span class="caret"></span>
                         <select class="form-input single-select" id="optionFormControl-1">
@@ -117,7 +121,7 @@
                 </div>
                 <!-- Multiple Option -->
                 <div class="form-group row">
-                    <label class="col-2" for="optionFormControl-1">Option List</label>
+                    <label class="col-2 label-inline" for="optionFormControl-1">Option List</label>
                     <div class="col-4 multiSelectWrapper">
                         <select multiple class="form-input multi-select" id="optionFormControl-1">
                             <option>Option One</option>
@@ -129,11 +133,11 @@
                 </div>
                 <!-- Check Box -->
                 <div class="form-group row">
-                    <label class="col-3">
+                    <label class="col-3 label-inline">
                         <input type="checkbox" class="form-check" id="checkFormControl-1">
                         <span>Default Check Box</span>
                     </label>
-                    <label class="col-3 disabled">
+                    <label class="col-3 label-inline disabled">
                         <input type="checkbox" class="form-check" id="checkFormControl-1" disabled>
                         <span>Default Check Box (Disabled)</span>
                     </label>
@@ -142,19 +146,19 @@
                 <fieldset class="form-field">
                     <legend>Radio Check Buttons</legend>
                     <div class="form-group row center-text horizontal-align-center-equal-space-around">
-                        <label class="col-2">
+                        <label class="col-2 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-1" name="radioFormControl_1" value="" checked>
                             <span>Radio Check One</span>
                         </label>
-                        <label class="col-2">
+                        <label class="col-2 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-2" name="radioFormControl_1" value="">
                             <span>Radio Check Two</span>
                         </label>
-                        <label class="col-2">
+                        <label class="col-2 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-3" name="radioFormControl_1" value="">
                             <span>Radio Check Three</span>
                         </label>
-                        <label class="col-3 disabled">
+                        <label class="col-3 label-inline disabled">
                             <input type="radio" class="form-check" id="radioFormControl-4" name="radioFormControl_1" value="" disabled>
                             <span>Radio Check Four (Disabled)</span>
                         </label>
@@ -164,19 +168,19 @@
                 <fieldset class="form-field">
                     <legend>Radio Check Buttons</legend>
                     <div class="form-group stack">
-                        <label class="col-3">
+                        <label class="col-3 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-1" name="radioFormControl_2" value="" checked>
                             <span>Radio Check One</span>
                         </label>
-                        <label class="col-3">
+                        <label class="col-3 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-2" name="radioFormControl_2" value="">
                             <span>Radio Check Two</span>
                         </label>
-                        <label class="col-3">
+                        <label class="col-3 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-3" name="radioFormControl_2" value="">
                             <span>Radio Check Three</span>
                         </label>
-                        <label class="col-3">
+                        <label class="col-3 label-inline">
                             <input type="radio" class="form-check" id="radioFormControl-4" name="radioFormControl_2" value="">
                             <span>Radio Check Four</span>
                         </label>
@@ -190,11 +194,11 @@
 
 
 
-            <!-- Custom Checkbox -->
+            <!-- Custom Input Checkbox - FontAwsome -->
             <form>
-                <div class="form-group center-text"><h3>Custom Checkbox - FontAwsome</h3></div>          
-                <!-- Custom Checkbox - FontAwsome - Style 1 -->
+                <div class="form-group center-text"><h3>Custom Checkbox - FontAwsome</h3></div>  
                 <div class="form-group row center-text">
+                <!-- Custom Input Checkbox - FontAwsome - Style 1 -->
                     <label class="col-3 custom-form-check">
                         <input type="checkbox" class="hidden-default-check" name="" id="">
                         <span class="custom-form-check-icon">
@@ -204,7 +208,7 @@
                         </span>
                         <span class="custom-form-check-content">Custom Checkbox</span>
                     </label>
-                <!-- Custom Checkbox - FontAwsome - Style 2 -->
+                <!-- Custom Input Checkbox - FontAwsome - Style 2 -->
                     <label class="col-3 custom-form-check">
                         <input type="checkbox" class="hidden-default-check" name="" id="">
                         <span class="custom-form-check-icon">
@@ -214,8 +218,7 @@
                         </span>
                         <span class="custom-form-check-content">Custom Checkbox</span>
                     </label>
-
-                <!-- Custom Checkbox - FontAwsome - Style 3 -->
+                <!-- Custom Input Checkbox - FontAwsome - Style 3 -->
                     <label class="col-3 custom-form-check">
                         <input type="checkbox" class="hidden-default-check" name="" id="">
                         <span class="custom-form-check-icon">
@@ -225,8 +228,7 @@
                         </span>
                         <span class="custom-form-check-content">Custom Checkbox</span>
                     </label>
-
-                <!-- Custom Checkbox - FontAwsome - Style 4 -->
+                <!-- Custom Input Checkbox - FontAwsome - Style 4 -->
                     <label class="col-3 custom-form-check">
                         <input type="checkbox" class="hidden-default-check" name="" id="">
                         <span class="custom-form-check-icon">
@@ -242,7 +244,7 @@
 
             <!-- Custom Radio Checkbox - FontAwsome -->
             <form>
-                <div class="form-group center-text"><h3>Custom Radio Checkbox - FontAwsome</h3></div>
+                <div class="form-group center-text"><h3>Custom Radio Check - FontAwsome</h3></div>
                 <!-- Custom Radio Checkbox - FontAwsome - Style 1 -->
                 <div class="form-group row center-text">
                     <label class="col-3 custom-form-check">
@@ -275,24 +277,24 @@
                 <div class="form-group center-text"><h3>Simple Custom Radio Checkbox - FontAwsome</h3></div>
                 <div class="form-group row">
                     <!-- Style 1 -->
-                    <label class="col-4 custom-form-check-alt">
+                    <label class="col-4 custom-form-check">
                         <input type="checkbox" class="hidden-default-check" name="" id="">
-                        <span class="custom-for-check-icon-alt"><i class="fa fa-check" aria-hidden="true"></i></span>
-                        <span class="custom-form-check-content-alt">Custom Radio Checkbox Alternative</span>
+                        <span class="custom-for-check-icon-alt outter-glow"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        <span class="custom-form-check-content">Custom Radio Checkbox Alternative</span>
                     </label>
 
                     <!-- Style 2 -->
-                    <label class="col-4 custom-form-check-alt-2">
+                    <label class="col-4 custom-form-check">
                         <input type="checkbox" class="hidden-default-check" name="" id="">
-                        <span class="custom-for-check-icon-alt-2"><i class="fa fa-check" aria-hidden="true"></i></span>
-                        <span class="custom-form-check-content-alt-2">Custom Radio Checkbox Alternative</span>
+                        <span class="custom-for-check-icon-alt inner-fill"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        <span class="custom-form-check-content">Custom Radio Checkbox Alternative</span>
                     </label>
 
                     <!-- Style 3 -->
-                    <label class="col-4 custom-form-check-alt-2 disabled">
+                    <label class="col-4 custom-form-check disabled">
                         <input type="checkbox" class="hidden-default-check" name="" id="" disabled>
-                        <span class="custom-for-check-icon-alt-2"><i class="fa fa-check" aria-hidden="true"></i></span>
-                        <span class="custom-form-check-content-alt-2">Custom Radio Checkbox Alternative</span>
+                        <span class="custom-for-check-icon-alt"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        <span class="custom-form-check-content">Custom Radio Checkbox Alternative</span>
                     </label>
                 </div>
             </form>
@@ -305,7 +307,7 @@
                 <div class="form-group row">
                     <!-- Text Input -->
                     <label for="inputFormControl-3" class="col-1 label-col">Text</label>
-                    <input type="text" class="col-4 form-input" id="inputFormControl-3" value="Text Input">
+                    <input type="text" class="col-4 form-input" id="inputFormControl-3" value="Text Input" reqruied>
                     <!-- Email Input -->
                     <label for="inputFormControl-4" class="col-1 col-offset-1 label-col">Email</label>
                     <input type="email" class="col-4 form-input" id="inputFormControl-4" value="asd@asd.com">
