--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="css/gridbox.css">
     <link rel="stylesheet" href="css/gridbox-grids.css">
     <link rel="stylesheet" href="css/gridbox-form.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <title>Gridbox</title>
 </head>
 <body>
-    
+    <div class="test"></div>
+    <div id="testid"></div>
+    <script src="js/gridbox.js"></script>
 </body>
 </html>
