--- a/navbar.html
+++ b/navbar.html
@@ -10,27 +10,96 @@
     <title>Navigation Bar</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
+
         <nav class="nav nav-default nav-top row">
             <!-- Brand Name -->
-            <div class="brand col-4">
+            <div class="brand col-16 col-mob-16 col-lap-4">
                 <div class="logo">
                     <img src="" alt="">
                 </div>
                 <div class="brandname">
                     <!-- Brand name -->
-                    Logo
+                    <p>Logo</p>
                 </div>
             </div>
-
             <!-- Nav Menu -->
-            <ul class="navmenu navmenu-right col-12">
-                <li class="menuitem"><a href="#">Home</a></li>
-                <li class="menuitem"><a href="#">Product</a></li>
-                <li class="menuitem"><a href="#">About</a></li>
-                <li class="menuitem"><a href="#">Contact</a></li>
-            </ul>
+            <div class="navmenuwrap col-16 col-mob-16 col-lap-12">
+
+                <!-- Menu Toggle on Mobile Devices -->
+                <div class="menutoggle" id="menutoggle" data-target="#nav">
+                    <p>Menu</p>
+                </div>
+                <ul class="navmenu" id="nav"><!-- JS Target -->
+                    <!-- Simple Menu Link -->
+                    <li class="menuitem link"><a class="active" href="#">Home</a></li><!-- JS Target: add .active class -->
+                    <!-- Dropdown Menu -->
+                    <li class="menuitem link dropdown">
+                        <a href="#" data-target="subnav1">Product</a>
+                        <ul class="navmenu-sub repos" id="subnav1"><!-- JS Target: add .show onclick; add repos when parent has .verticle class -->
+                            <li class="submenuitem link"><a href="#">Item 1</a></li>
+                            <li class="submenuitem link"><a href="#">Item 2</a></li>
+                            <li class="submenuitem link"><a href="#">Item 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="menuitem link dropdown">
+                        <a href="#" data-target="subnav2">About</a>
+                        <ul class="navmenu-sub repos" id="subnav2"><!-- JS Target: add .show onclick; add repos when parent has .verticle class -->
+                            <li class="submenuitem link"><a href="#">Another Item 1</a></li>
+                            <li class="submenuitem link"><a href="#">Another Item 2</a></li>
+                            <li class="submenuitem link"><a href="#">Another Item 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="menuitem link"><a href="#">Contact</a></li>
+                    <!-- Search Icon -->
+                    <li class="menuitem link"><a id="search-icon" href="#">Search</a></li>
+                </ul>
+            </div>           
         </nav>
+
     </div>
+    <script src="js/gridbox.js"></script>
+    <script>
+    // Show dropdown when clicking menu link
+    var li = im("#nav").children();
+    var dropdown = im(".navmenu-sub");
+
+    li.each(function(){
+        //add click event on each of menu list item
+        this.click(function(e){
+            e.preventDefault();
+
+            var a = this.firstChild();
+            var target = a.data("target");
+
+            // reset the classes
+            li.each(function(){
+                this.firstChild().removeClass("active");
+            });
+            dropdown.each(function(i){
+                i.removeClass("show");
+            });
+
+            // add active class to menu list item
+            a.addClass("active");
+            // toggle dropdown menu
+            if(target){
+                im("#" + target).toggleClass("show");
+            }
+            
+        });
+    });
+
+
+    // Hide dropdown when not clicking on the menu link
+    var a = im(".link").eachChild();
+
+    im(document).notClick(a, function(){
+        dropdown.each(function(i){
+            i.removeClass("show");
+        });
+    });
+    
+    </script>
 </body>
 </html>
