improve transition effect, seperate style and consolidate into new theme file

--- a/navbar-modulized.html
+++ b/navbar-modulized.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/gridbox.css">
     <link rel="stylesheet" href="css/gridbox-grids.css">
     <link rel="stylesheet" href="css/gridbox-nav-mordenize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Morden Navigation Bar - Modulized</title>
 </head>
 <body>
@@ -18,14 +19,14 @@
                 <img src="img/gridbox_logo.png" alt="">
                 <div class="brandname"><span>Gridbox</span></div>
             </div>
-            <div class="menu-toggle fixed peach bottom-left flying-circle" id="menu-toggle"><span></span></div>
+            <div class="menu-toggle fixed top-right" id="menu-toggle"><span></span></div>
 
-            <div class="overlay peach" id="overlay">
+            <div class="overlay" id="overlay">
                 <nav>
                     <ul class="main slideright">
-                        <li class="menuitem"><span>Item 1</span></li>
+                        <li class="menuitem"><a href="#">Item 1</a></li>
                         <li class="menuitem dropdown">
-                            <span class="sub-toggle">Item 2</span>
+                            <a href="#" class="sub-toggle">Item 2</a>
                             <ul class="sub slideup">
                                 <li><a href="#">Subitem 1</a></li>
                                 <li><a href="#">Subitem 2</a></li>
@@ -33,7 +34,7 @@
                             </ul>
                         </li>
                         <li class="menuitem dropdown">
-                            <span class="sub-toggle">Item 3</span>
+                            <a href="#" class="sub-toggle">Item 3</a>
                             <ul class="sub slideup">
                                 <li><a href="#">Subitem 1</a></li>
                                 <li><a href="#">Subitem 2</a></li>
