--- a/login.html
+++ b/login.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/gridbox.css">
-    <title>Form Element</title>
+    <title>Login Form</title>
 </head>
 <body>
-    <div class="container-fluid full-screen bg-lightgray">
-        <div class="screen-center horizontal-align-center">
-            <div class="padding-around-30 bg-white dropshadow">
+    <div class="login-form-container bg-lightgray ">
+
+            <div class="login-form bg-white">
 
                 <!-- Brand Section -->
                 <div class="center-text margin-top-45 margin-bottom logo-frame">
@@ -73,7 +73,7 @@
                 </div>
 
             </div>
-        </div>
+
     </div>
 
     <script src="js/gridbox.js"></script>
